tests/should_fail/wrong_return_type.nv
module wrong_return_type
// SHOULD FAIL: function declares -> String but returns Int
fn get_value() -> String {
    return 42
}
